--- a/_modules/arc/job/trsh.html
+++ b/_modules/arc/job/trsh.html
@@ -506,8 +506,12 @@
                 <span class="k">if</span> <span class="s1">&#39;molpro calculation terminated&#39;</span> <span class="ow">in</span> <span class="n">line</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> \
                         <span class="ow">or</span> <span class="s1">&#39;variable memory released&#39;</span> <span class="ow">in</span> <span class="n">line</span><span class="o">.</span><span class="n">lower</span><span class="p">():</span>
                     <span class="k">return</span> <span class="s1">&#39;done&#39;</span><span class="p">,</span> <span class="nb">list</span><span class="p">(),</span> <span class="s1">&#39;&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span>
-                <span class="k">elif</span> <span class="s1">&#39;No convergence&#39;</span> <span class="ow">in</span> <span class="n">line</span><span class="p">:</span>
+                <span class="k">elif</span> <span class="s1">&#39;No convergence&#39;</span> <span class="ow">in</span> <span class="n">line</span> <span class="ow">and</span> <span class="s1">&#39;?No convergence in rhfpr&#39;</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">line</span><span class="p">:</span>
                     <span class="n">keywords</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;Unconverged&#39;</span><span class="p">]</span>
+                    <span class="n">error</span> <span class="o">=</span> <span class="s1">&#39;Unconverged&#39;</span>
+                    <span class="k">break</span>
+                <span class="k">elif</span> <span class="s1">&#39;error exit can be avoided using the IGNORE_ERROR option on the ORBITAL directive&#39;</span> <span class="ow">in</span> <span class="n">line</span><span class="p">:</span>
+                    <span class="n">keywords</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;IGNORE_ERROR in the ORBITAL directive&#39;</span><span class="p">]</span>
                     <span class="n">error</span> <span class="o">=</span> <span class="s1">&#39;Unconverged&#39;</span>
                     <span class="k">break</span>
                 <span class="k">elif</span> <span class="s1">&#39;A further&#39;</span> <span class="ow">in</span> <span class="n">line</span> <span class="ow">and</span> <span class="s1">&#39;Mwords of memory are needed&#39;</span> <span class="ow">in</span> <span class="n">line</span> <span class="ow">and</span> <span class="s1">&#39;Increase memory to&#39;</span> <span class="ow">in</span> <span class="n">line</span><span class="p">:</span>
