--- a/_modules/arc/species/conformers.html
+++ b/_modules/arc/species/conformers.html
@@ -1563,7 +1563,7 @@
 
 
 <div class="viewcode-block" id="rdkit_force_field"><a class="viewcode-back" href="../../../api/conformers.html#arc.species.conformers.rdkit_force_field">[docs]</a><span class="k">def</span> <span class="nf">rdkit_force_field</span><span class="p">(</span><span class="n">label</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
-                      <span class="n">rd_mol</span><span class="p">:</span> <span class="n">RDMol</span><span class="p">,</span>
+                      <span class="n">rd_mol</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">RDMol</span><span class="p">],</span>
                       <span class="n">mol</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">Molecule</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                       <span class="n">num_confs</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">int</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
                       <span class="n">force_field</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s1">&#39;MMFF94s&#39;</span><span class="p">,</span>
@@ -1591,6 +1591,8 @@
 <span class="sd">            - Entries are float numbers representing the energies.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">xyzs</span><span class="p">,</span> <span class="n">energies</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(),</span> <span class="nb">list</span><span class="p">()</span>
+    <span class="k">if</span> <span class="n">rd_mol</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+        <span class="k">return</span> <span class="n">xyzs</span><span class="p">,</span> <span class="n">energies</span>
     <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">rd_mol</span><span class="o">.</span><span class="n">GetNumConformers</span><span class="p">()):</span>
         <span class="k">if</span> <span class="n">optimize</span><span class="p">:</span>
             <span class="n">v</span><span class="p">,</span> <span class="n">j</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">0</span>
